<resources>
    <string name="app_name" translatable="false">Go4Lunch</string>
    <string name="slogan" translatable="false">Find a nice restaurant for lunch!</string>
    <string name="login_with_email">or login with email</string>
    <string name="type_email_string" translatable="false">email</string>
    <string name="type_password_string">password</string>
    <string name="landing_page_facebook_button_text">continue with facebook</string>
    <string name="landing_page_google_button_text">continue with Google</string>
    <string name="landing_page_email_button_text">continue with email</string>
    <string name="landing_page_create_account_link">Not a member yet? Create your account now!</string>
    <string name="maps_view_appbar_title">who\'s there&#x2026;</string>
    <string name="menu_search_item_title">Search</string>
    <string name="map_view_page_label">Map View</string>
    <string name="list_view_page_label">List View</string>
    <string name="workmates_view_page_label">Workmates</string>
    <string name="list_view_appbar_title">today’s special?</string>
    <string name="workmates_view_appbar_title">my workmates</string>
    <string name="number_of_rating_stars" translatable="false">3</string>
    <string name="frd_call_item_text">CALL</string>
    <string name="frd_rate_item_text">LIKE</string>
    <string name="frd_website_item_text">WEBSITE</string>
    <string name="drawer_my_selected_restaurant_label">Your lunch</string>
    <string name="drawer_my_settings_label">Settings</string>
    <string name="drawer_logout_label">Logout</string>

    <!-- Facebook -->
    <string name="facebook_app_id" translatable="false">497958498159883</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb497958498159883</string>

    <!--  Google Auth -->
    <string name="web_client_id" translatable="false">238464625821-9u2ora1s2bgd66b3eb7vv01qe64cupg6.apps.googleusercontent.com</string>

    <!--  Google Maps -->
    <string name="default_zoom_value" translatable="false">15.0</string>
    <string name="default_detection_radius_value" translatable="false">1000</string>

    <string name="default_lat_value" translatable="false">43.6067724</string>
    <string name="default_long_value" translatable="false">1.4371122</string>

    <string name="place_api_url" translatable="false">https://maps.googleapis.com/maps/api/place/</string>

    <string name="no_restaurants_message">no restaurant around you</string>
    <string name="no_response_message">no response from server</string>
    <string name="no_internet_message">It seems you have no internet</string>
    <string name="network_error_message">network error while requesting data</string>
    <string name="accept_permissions_message">Please accept permissions and activate GPS to continue</string>
    <string name="facebook_canceled_connection_message">Facebook login cancelled</string>
    <string name="facebook_connection_failed_message">Facebook login failed</string>
    <string name="not_connected_message">Hey, you\'re not connected</string>
    <string name="google_connection_failed_message">Google sign in failed</string>
    <string name="distance_unit" translatable="false">%s m</string>
    <string name="closed_text">closed</string>
    <string name="open_at_text">open at %s</string>
    <string name="open_until_text">open until %s</string>
    <string name="closed_today_text">closed today</string>

    <string name="place_photo_api_url" translatable="false">https://maps.googleapis.com/maps/api/place/photo?maxwidth=%s&amp;photoreference=%s&amp;key=%s</string>

    <string name="no_available_hours">no opening hours available</string>
    <string name="landing_page_create_account_button_text">create new account</string>
    <string name="email_bad_format_message">email must have xxx@yyy.zz format</string>
    <string name="password_bad_format_message">password must contain upper/lower/special char and numbers</string>
    <string name="password_too_short_message">password must be 8 charcters long</string>
    <string name="email_account_creation_failed">Account creation failed</string>
    <string name="email_already_exists">Email already exists</string>
    <string name="password_too_weak">password too weak</string>
    <string name="invalid_email">invalid email</string>
    <string name="invalid_password">invalid password</string>
    <string name="workmate_has_decided">%s is eating at %s</string>
    <string name="workmate_has_not_decided">%s has not decided yet.</string>
    <string name="firestore_fails_message">Problem with network, please try again</string>
    <string name="joined_workmate_message">%s has joined!</string>
    <string name="dial_error">No phone number available</string>
    <string name="restaurant_not_yet_selected">Select a restaurant first :0D</string>
    <string name="notification_title">Don\'t forget!</string>
    <string name="notification_text_alone">Lunch at 12:00 at %s</string>
    <string name="notification_setting_label">Notifications</string>
    <string name="landing_page_logo_description" translatable="false">landing page logo</string>
    <string name="restaurant_details_description" translatable="false">restaurant details description</string>
    <string name="floating_action_button_description" translatable="false">FAB to select restaurant for lunch</string>

    <plurals name="notification_text_not_alone">
        <item quantity="one">Lunch at 12:00 with %s colleague at %s.\n%s</item>
        <item quantity="other">Lunch at 12:00 with %s colleagues at %s.\n%s</item>
    </plurals>

</resources>