<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/drawer_menu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/my_selected_restaurant"
            android:icon="@drawable/ic_baseline_restaurant_24"
            android:title="@string/drawer_my_selected_restaurant_label"/>
        <item
            android:id="@+id/my_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/drawer_my_settings_label"/>
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/drawer_logout_label"/>
    </group>
</menu>