<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/create_account_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="#006D77">

    <ImageView
        android:id="@+id/create_account_logo"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:scaleType="fitCenter"
        android:src="@drawable/landing_page_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    Login with email : input-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/create_account_email_input"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/landing_page_standard_vertical_spacing_value"
        app:boxStrokeColor="@color/light_grey"
        app:helperText="@string/type_email_string"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/light_grey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_account_logo"
        app:startIconDrawable="@drawable/ic_baseline_alternate_email_24"
        app:startIconTint="@color/light_grey">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_account_email_value"
            android:layout_width="match_parent"
            android:layout_height="@dimen/landing_page_inputs_height"
            android:background="@android:color/transparent"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingVertical="@dimen/zero_dp"
            android:textColor="@color/white"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/landing_page_buttons_and_fields_text_size" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--    Login with email : password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/create_account_password_input"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/landing_page_standard_vertical_spacing_value"
        app:boxStrokeColor="@color/light_grey"
        app:helperText="@string/type_password_string"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/light_grey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_account_email_input"
        app:startIconDrawable="@drawable/ic_baseline_password_24"
        app:startIconTint="@color/light_grey">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_account_password_value"
            android:layout_width="match_parent"
            android:layout_height="@dimen/landing_page_inputs_height"
            android:background="@android:color/transparent"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingVertical="@dimen/zero_dp"
            android:textColor="@color/white"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/landing_page_buttons_and_fields_text_size" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--    Email sign in button-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_account_email_login_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/landing_page_buttons_height"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_corners_button_shape"
        android:drawableStart="@drawable/ic_envelope_24"
        android:drawablePadding="32dp"
        android:text="@string/landing_page_create_account_button_text"
        android:textAlignment="textStart"
        android:textColor="@color/common_google_signin_btn_text_light"
        android:textSize="@dimen/landing_page_buttons_and_fields_text_size"
        app:backgroundTint="@color/light_grey"
        app:drawableTint="@color/common_google_signin_btn_text_light_default"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_account_password_input" />

</androidx.constraintlayout.widget.ConstraintLayout>