<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/login_fragment_scroll_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/login_fragment_min_height">

        <!--    Facebook sign in button-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_fragment_facebook_login_button"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="@dimen/landing_page_buttons_height"
            android:layout_marginStart="@dimen/landing_page_borders_spacing_value"
            android:layout_marginTop="@dimen/landing_page_logo_to_buttons_spacing_value"
            android:layout_marginEnd="@dimen/landing_page_borders_spacing_value"
            android:background="@drawable/rounded_corners_button_shape"
            android:drawableStart="@drawable/ic_baseline_facebook_24"
            android:drawablePadding="32dp"
            android:text="@string/landing_page_facebook_button_text"
            android:textAlignment="textStart"
            android:textColor="@color/com_facebook_primary_button_text_color"
            android:textSize="@dimen/landing_page_buttons_and_fields_text_size"
            app:backgroundTint="@color/com_facebook_blue"
            app:drawableTint="@color/com_facebook_primary_button_text_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--    Google sign in button-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_fragment_google_login_button"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="@dimen/landing_page_buttons_height"
            android:layout_marginStart="@dimen/landing_page_borders_spacing_value"
            android:layout_marginTop="@dimen/landing_page_standard_vertical_spacing_value"
            android:layout_marginEnd="@dimen/landing_page_borders_spacing_value"
            android:background="@drawable/rounded_corners_button_shape"
            android:drawableStart="@drawable/ic_google_icon_24"
            android:drawablePadding="32dp"
            android:text="@string/landing_page_google_button_text"
            android:textAlignment="textStart"
            android:textColor="@color/common_google_signin_btn_text_light"
            android:textSize="@dimen/landing_page_buttons_and_fields_text_size"
            app:backgroundTint="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_fragment_facebook_login_button" />

        <!--    Login with email : text-->
        <View
            android:id="@+id/login_fragment_divider_left"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="@dimen/landing_page_dividers_thickness"
            android:layout_marginStart="@dimen/landing_page_borders_spacing_value"
            android:layout_marginTop="16dp"
            android:background="@color/light_grey"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/login_fragment_alternative_connection_type_text"
            app:layout_constraintTop_toBottomOf="@id/login_fragment_google_login_button" />

        <TextView
            android:id="@+id/login_fragment_alternative_connection_type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/landing_page_standard_vertical_spacing_value"
            android:paddingHorizontal="16dp"
            android:text="@string/login_with_email"
            android:textColor="@color/light_grey"
            android:textSize="@dimen/landing_page_standard_text_size"
            app:layout_constraintLeft_toRightOf="@id/login_fragment_divider_left"
            app:layout_constraintRight_toLeftOf="@id/login_fragment_divider_right"
            app:layout_constraintTop_toBottomOf="@id/login_fragment_google_login_button" />

        <View
            android:id="@+id/login_fragment_divider_right"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="@dimen/landing_page_dividers_thickness"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/landing_page_borders_spacing_value"
            android:background="@color/light_grey"
            app:layout_constraintLeft_toRightOf="@id/login_fragment_alternative_connection_type_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_fragment_google_login_button" />

        <!--    Email sign in button selection-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_fragment_email_login_button_selection"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="@dimen/landing_page_buttons_height"
            android:layout_marginStart="@dimen/landing_page_borders_spacing_value"
            android:layout_marginTop="@dimen/landing_page_standard_vertical_spacing_value"
            android:layout_marginEnd="@dimen/landing_page_borders_spacing_value"
            android:background="@drawable/rounded_corners_button_shape"
            android:drawableStart="@drawable/ic_envelope_24"
            android:drawablePadding="32dp"
            android:text="@string/landing_page_email_button_text"
            android:textAlignment="textStart"
            android:textColor="@color/common_google_signin_btn_text_light"
            android:textSize="@dimen/landing_page_buttons_and_fields_text_size"
            app:backgroundTint="@color/light_grey"
            app:drawableTint="@color/common_google_signin_btn_text_light_default"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_fragment_alternative_connection_type_text" />


        <androidx.constraintlayout.widget.Group
            android:id="@+id/login_fragment_email_login_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="
        login_fragment_email_input,
        login_fragment_password_input,
        login_fragment_email_login_button,
        login_fragment_forgot_password_link,
        login_fragment_create_account_link" />

        <!--    Login with email : input-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_fragment_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/landing_page_borders_spacing_value"
            android:layout_marginTop="@dimen/landing_page_standard_vertical_spacing_value"
            android:layout_marginRight="@dimen/landing_page_borders_spacing_value"
            app:boxStrokeColor="@color/light_grey"
            app:helperText="@string/type_email_string"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/light_grey"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_fragment_alternative_connection_type_text"
            app:startIconDrawable="@drawable/ic_baseline_alternate_email_24"
            app:startIconTint="@color/light_grey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_fragment_email_value"
                android:layout_width="match_parent"
                android:layout_height="@dimen/landing_page_inputs_height"
                android:background="@android:color/transparent"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingVertical="@dimen/zero_dp"
                android:textColor="@color/white"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/landing_page_buttons_and_fields_text_size" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--    Login with email : password-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_fragment_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/landing_page_borders_spacing_value"
            android:layout_marginTop="@dimen/landing_page_standard_vertical_spacing_value"
            android:layout_marginRight="@dimen/landing_page_borders_spacing_value"
            app:boxStrokeColor="@color/light_grey"
            app:helperText="@string/type_password_string"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/light_grey"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_fragment_email_input"
            app:startIconDrawable="@drawable/ic_baseline_password_24"
            app:startIconTint="@color/light_grey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_fragment_password_value"
                android:layout_width="match_parent"
                android:layout_height="@dimen/landing_page_inputs_height"
                android:background="@android:color/transparent"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingVertical="@dimen/zero_dp"
                android:textColor="@color/white"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/landing_page_buttons_and_fields_text_size" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--    Email sign in button-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_fragment_email_login_button"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="@dimen/landing_page_buttons_height"
            android:layout_marginStart="@dimen/landing_page_borders_spacing_value"
            android:layout_marginTop="@dimen/landing_page_standard_vertical_spacing_value"
            android:layout_marginEnd="@dimen/landing_page_borders_spacing_value"
            android:background="@drawable/rounded_corners_button_shape"
            android:drawableStart="@drawable/ic_envelope_24"
            android:drawablePadding="32dp"
            android:text="@string/landing_page_email_button_text"
            android:textAlignment="textStart"
            android:textColor="@color/common_google_signin_btn_text_light"
            android:textSize="@dimen/landing_page_buttons_and_fields_text_size"
            app:backgroundTint="@color/light_grey"
            app:drawableTint="@color/common_google_signin_btn_text_light_default"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_fragment_password_input" />

        <!--    forgot password link-->
        <TextView
            android:id="@+id/login_fragment_forgot_password_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/landing_page_borders_spacing_value"
            android:layout_marginTop="6dp"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:linksClickable="true"
            android:text="@string/landing_page_forgot_password_link"
            android:textColor="@color/light_grey"
            android:textSize="@dimen/landing_page_standard_text_size"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_fragment_email_login_button" />

        <!--    create account link-->
        <TextView
            android:id="@+id/login_fragment_create_account_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/landing_page_borders_spacing_value"
            android:layout_marginBottom="@dimen/landing_page_standard_vertical_spacing_value"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:linksClickable="true"
            android:text="@string/landing_page_create_account_link"
            android:textColor="@color/light_grey"
            android:textSize="@dimen/landing_page_standard_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_fragment_email_login_button"
            app:layout_constraintVertical_bias="1" />

        <!--    Circular progress indicator    -->
        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/login_fragment_progress_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
